Revert "Merge pull request #29 from Frederick528/18-feature/user-book-entity-crud"
This reverts commit 95d23c499b2e52566f8a5e1c1571d9d6b4ba6e81, reversing
changes made to bb44dd37ede964442f90c77bf50bcf1cfbd78118.