@@ -9,6 +9,7 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -20,7 +21,10 @@ public class CategoryService {
     // 1. 카테고리 등록
     @Transactional
     public Long createCategory(CategoryRequestDTO request) {
-        Category category = request.toEntity();
+        Category category = Category.builder()
+                .categoryName(request.getCategoryName())
+                .expByCategory(request.getExpByCategory())
+                .build();
 
         return categoryRepository.save(category).getCategoryId();
     }
@@ -37,7 +41,7 @@ public class CategoryService {
     public List<CategoryResponseDTO> getAllCategories() {
         return categoryRepository.findAllByDeletedAtIsNull().stream()
                 .map(CategoryResponseDTO::from)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     // 4. 카테고리 수정 (수정 시 더티 체킹 활용을 위해 @Transactional 필수)
@@ -49,7 +53,7 @@ public class CategoryService {
                 .orElseThrow(() -> new IllegalArgumentException("수정할 카테고리가 존재하지 않거나 이미 삭제되었습니다."));
 
         // 2. 엔티티의 비즈니스 메서드 호출 (변경 감지 활용)
-        category.update(request);
+        category.update(request.getCategoryName(), request.getExpByCategory());
     }
 
     // 5. 카테고리 삭제 (Soft Delete)
